--- a/src/style.css
+++ b/src/style.css
@@ -1,20 +1,34 @@
 /* Imports Inter, Ubuntu Mono and Ubuntu fonts */
 @font-face {
-  font-family: 'Inter';
-  src: url("/fonts/Inter.ttf");
+  font-family: 'Ubuntu';
+  src: url("/fonts/Ubuntu.ttf");
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: 'Ubuntu';
+  src: url("/fonts/Ubuntu-Bold.ttf");
+  font-weight: bold;
 }
 
 :root
 {
   --page-background: rgb(245, 245, 245);
   --background-separation: rgb(255, 255, 255);
+  --color-normal: rgb(5, 5, 5);
 }
 
 body
 {
   margin: 0;
   background: var(--page-background);
+  color: var(--color-normal);
   font-family: "Inter", Arial, sans-serif;
+}
+
+p
+{
+  margin: 0;
 }
 
 img
