--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,6 @@
 @import url("css/utils.css");
 @import url("css/button.css");
+@import url("css/clip-box.css");
 @import url("css/css-reset.css");
 
 :root
