--- a/src/style.css
+++ b/src/style.css
@@ -19,6 +19,7 @@
 {
   --page-background: rgb(255, 255, 255);
   --background-separation: rgb(245, 245, 245);
+  --border-semitransparent: rgba(50, 50, 50, 0.5);
   --background-control: rgb(230, 230, 230);
   --background-decoration: rgb(250, 250, 250);
   --background-control-active: rgb(200, 200, 200);
