--- a/src/style.css
+++ b/src/style.css
@@ -3,47 +3,57 @@
 @import url("css/clip-box.css");
 @import url("css/css-reset.css");
 
-:root
-{
+:root {
   --page-background: rgb(255, 255, 255);
   --background-separation: rgb(245, 245, 245);
   --background-control: rgb(230, 230, 230);
   --background-control-active: rgb(200, 200, 200);
+
   --color-decoration: rgba(50, 50, 50, 0.5);
-  --color-faded: rgb(15, 15, 15);
-  --color-normal: rgb(5, 5, 5);
+  --color-faded: rgb(150, 150, 150);
+  --color-normal: rgb(50, 50, 50);
+  --color-link: rgb(35, 35, 35);
+  --color-titles: rgb(5, 5, 5);
   --color-active: rgb(3, 3, 3);
-  --color-link: rgb(0, 0, 0);
   --color-boundary-border: rgba(0, 0, 0, 0.03);
 }
 
-@media (prefers-color-scheme: dark)
-{
-  :root
-  {
+@media (prefers-color-scheme: dark) {
+  :root {
     --page-background: rgb(30, 40, 47);
     --background-separation: rgb(50, 60, 67);
     --background-control: rgb(70, 80, 87);
     --background-control-active: rgb(90, 100, 107);
+
     --color-decoration: rgba(150, 150, 167, 0.75);
     --color-faded: rgb(200, 200, 200);
-    --color-normal: rgb(238, 238, 238);
+    --color-normal: rgb(230, 230, 230);
+    --color-link: rgb(235, 235, 235);
+    --color-titles: rgb(250, 250, 250);
     --color-active: rgb(255, 255, 255);
-    --color-link: rgb(255, 255, 255);
     --color-boundary-border: rgba(255, 255, 255, 0.025);
   }
-   
 }
 
-body
-{
+body {
   background: var(--page-background);
   color: var(--color-normal);
-  font-family: "Inter", Arial, sans-serif;
+  font-family: "Inter", Helvetica, Arial, sans-serif;
+  margin: 0;
 }
 
 /* Fixed images being too big */
-img
-{
+img {
   max-width: 100%;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: normal;
+  font-family: "Ubuntu";
+  color: var(--color-titles);
 }
