--- a/src/css/utils.css
+++ b/src/css/utils.css
@@ -26,4 +26,10 @@
 a:link, a:visited
 {
   color: var(--color-link);
+  text-decoration: none;
+}
+
+a:link:hover, a:visited:hover {
+  color: var(--color-link-hover);
+  text-decoration: underline;
 }
