--- a/src/style.css
+++ b/src/style.css
@@ -13,7 +13,8 @@
   --color-decoration: rgba(50, 50, 50, 0.5);
   --color-faded: rgb(150, 150, 150);
   --color-normal: rgb(50, 50, 50);
-  --color-link: rgb(35, 35, 35);
+  --color-link: rgb(45, 40, 70);
+  --color-link-hover: rgb(20, 5, 100);
   --color-titles: rgb(5, 5, 5);
   --color-active: rgb(3, 3, 3);
   --color-boundary-border: rgba(0, 0, 0, 0.03);
@@ -26,13 +27,14 @@
     --page-background: rgb(30, 40, 47);
     --background-separation: rgb(50, 60, 67);
     --background-control: rgb(70, 80, 87);
-    --background-control-hover: rgb(80, 90, 97);
-    --background-control-active: rgb(90, 100, 107);
+    --background-control-hover: rgb(90, 100, 107);
+    --background-control-active: rgb(80, 90, 97);
 
     --color-decoration: rgba(150, 150, 167, 0.75);
     --color-faded: rgb(200, 200, 200);
     --color-normal: rgb(230, 230, 230);
-    --color-link: rgb(235, 235, 235);
+    --color-link: rgb(235, 235, 255);
+    --color-link-hover: rgb(200, 200, 255);
     --color-titles: rgb(250, 250, 250);
     --color-active: rgb(255, 255, 255);
     --color-boundary-border: rgba(255, 255, 255, 0.035);
