--- a/src/css/clip-box.css
+++ b/src/css/clip-box.css
@@ -1,9 +1,14 @@
 @keyframes clipbox-animation {
-  from { transform: translateY(100%); opacity: 0; }
-  to { transform: translateY(0%); opacity: 1; }
+  from {
+    transform: translateY(100%);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0%);
+    opacity: 1;
+  }
 }
 
-.clip-box > *
-{
-  animation: clipbox-animation .5s cubic-bezier(0, 0.5, 0.4, 1.5);
+.clip-box > * {
+  animation: clipbox-animation 0.5s cubic-bezier(0, 0.5, 0.4, 1.5);
 }
