--- a/src/style.css
+++ b/src/style.css
@@ -3,8 +3,18 @@
 @import url("css/css-reset.css");
 @import url("css/button.css");
 @import url("css/language-label.css");
+@import url("css/page-main.css");
+@import url("css/responsive.css");
 
 :root {
+  /* Font Sizes */
+  --font-size-content-as-text-title: 3rem;
+  --font-size-content-as-text: 8rem;
+  --font-size-primary-title: 2rem;
+  --font-size-primary-title-subcontent: 1.35rem;
+  --font-size-content: 1rem;
+
+  /* Backgrounds */
   --page-background: rgb(250, 250, 250);
   --background-separation: rgb(245, 245, 245);
   --background-control: rgb(230, 230, 230);
@@ -12,6 +22,7 @@
   --background-control-active: rgb(220, 220, 220);
   --background-card: linear-gradient(162deg, rgb(245, 245, 245) 50%, rgb(242, 242, 242) 100%);
 
+  /* Colors */
   --color-decoration: rgba(50, 50, 50, 0.5);
   --color-faded: rgb(150, 150, 150);
   --color-normal: rgb(50, 50, 50);
@@ -19,18 +30,18 @@
   --color-link-hover: rgb(20, 5, 100);
   --color-titles: rgb(5, 5, 5);
   --color-active: rgb(3, 3, 3);
+  /* Border Colors */
   --color-out-border: rgba(255, 255, 255, 0.7);
   --color-boundary-border: rgba(0, 0, 0, 0.05);
   --color-boundary-border-hover: rgba(0, 0, 0, 0.04);
   --color-boundary-border-active: rgba(0, 0, 0, 0.07);
 
+  /* Border Radius */
   --border-radius-normal: 10px;
 
-  --font-size-content-as-text-title: 3rem;
-  --font-size-content-as-text: 8rem;
-  --font-size-primary-title: 2rem;
-  --font-size-primary-title-subcontent: 1.35rem;
-  --font-size-content: 1rem;
+  /* Margins */
+  --margin-global-page-side-borders: 3rem;
+  --margin-global-page-top-borders: 1rem;
 }
 
 @media (prefers-color-scheme: dark) {
