--- a/src/style.css
+++ b/src/style.css
@@ -1,84 +1,208 @@
-@import url("css/utils.css");
-@import url("css/clip-box.css");
-@import url("css/css-reset.css");
-@import url("css/button.css");
-@import url("css/language-label.css");
-@import url("css/table.css");
-@import url("css/page-main.css");
+@import url("css-reset.css");
+@import url("button.css");
+@import url("project-card.css");
+@import url("contact-card.css");
 
 :root {
-  /* Font Sizes */
-  --font-size-content-as-text-title: 3rem;
-  --font-size-content-as-text: 8rem;
-  --font-size-primary-title: 2rem;
-  --font-size-primary-title-subcontent: 1.35rem;
-  --font-size-content: 1rem;
+    --background-darkest: #00080E;
+    --background-2: #011627;
+    --background-2-saturated: #0B2438;
+    --brand-color: #FF3366;
+    --brand-color-saturated: #FF6188;
+    --cyan-accent: #2EC4B6;
+    --bright-white: #F6F7F8;
+    --text-normal: #E8EBED;
+    --text-faded: #CBD1D7;
+    --blue-accent: #20A4F3;
 
-  /* Backgrounds */
-  --page-background: rgb(250, 250, 250);
-  --background-separation: rgb(245, 245, 245);
-  --background-control: rgb(230, 230, 230);
-  --background-control-hover: rgb(225, 225, 225);
-  --background-control-active: rgb(220, 220, 220);
-  --background-card: linear-gradient(162deg, rgb(245, 245, 245) 50%, rgb(242, 242, 242) 100%);
+    --control-border-radius: 12px;
+    --control-outer-border: rgba(0, 0, 0, 25%);
 
-  /* Colors */
-  --color-decoration: rgba(50, 50, 50, 0.5);
-  --color-faded: rgb(150, 150, 150);
-  --color-normal: rgb(50, 50, 50);
-  --color-link: rgb(37, 50, 126);
-  --color-link-hover: rgb(20, 5, 100);
-  --color-titles: rgb(5, 5, 5);
-  --color-active: rgb(3, 3, 3);
-  /* Border Colors */
-  --color-out-border: rgba(255, 255, 255, 0.7);
-  --color-boundary-border: rgba(0, 0, 0, 0.05);
-  --color-boundary-border-hover: rgba(0, 0, 0, 0.04);
-  --color-boundary-border-active: rgba(0, 0, 0, 0.07);
+    --text-size-header: 64px;
+    --text-size-header-sub: 24px;
+    --text-size-paragraph-focus: 20px;
 
-  /* Border Radius */
-  --border-radius-normal: 10px;
-  --border-radius-small: calc(var(--border-radius-normal) / 2);
-
-  /* Margins */
-  --margin-global-page-side-borders: 3rem;
-  --margin-global-page-top-borders: 1rem;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --page-background: rgb(0, 17, 38);
-    --background-separation: rgb(0, 36, 81);
-    --background-control: rgb(14, 99, 156);
-    --background-control-hover: rgb(43, 118, 168);
-    --background-control-active: rgb(57, 127, 174);
-    --background-card: linear-gradient(162deg, rgba(0, 36, 81, 1) 50%, rgb(0, 34, 75) 100%);
-
-    --color-decoration: rgba(150, 190, 247, 0.9);
-    --color-faded: rgb(200, 200, 200);
-    --color-normal: rgb(230, 230, 230);
-    --color-link: rgb(118, 118, 201);
-    --color-link-hover: rgb(137, 137, 250);
-    --color-titles: rgb(250, 250, 250);
-    --color-active: rgb(255, 255, 255);
-    --color-out-border: rgba(3, 3, 3, 0.5);
-    --color-boundary-border: rgba(200, 217, 238, 0.1);
-    --color-boundary-border-hover: rgba(255, 255, 255, 0.1);
-    --color-boundary-border-active: rgba(255, 255, 255, 0.15);
-  }
+    --space-main-box: 64px;
 }
 
 body {
-  background: var(--page-background);
-  color: var(--color-normal);
-  font-family: "Inter", Helvetica, Arial, sans-serif;
-  font-size: var(--font-size-content);
-  margin: 0;
+    display: flex;
+    flex-direction: column;
+    background-color: var(--background-darkest);
+    color: var(--text-normal);
+    font-family: 'Roboto Condensed', 'sans-serif';
+    font-size: 16px;
+    margin: 0px;
 }
 
-@media screen and (max-width: 600px) {
-  :root {
-    /* Margins */
-    --margin-global-page-side-borders: 1.5rem;
-  }
+/* Style all links */
+a {
+    color: var(--cyan-accent);
+}
+
+span.text-highlight {
+    color: var(--blue-accent);
+}
+
+.main-header {
+    display: flex;
+    justify-content: space-between;
+    flex: 1;
+    padding: 12px var(--space-main-box);
+    background-color: var(--background-2);
+    border-bottom: 1px solid var(--background-2-saturated);
+    margin-bottom: 1px;
+    outline: 1px solid var(--control-outer-border);
+}
+
+.main-header .right-buttons {
+    display: flex;
+    flex-direction: row;
+    gap: 12px;
+}
+
+.hero-section {
+    display: flex;
+    padding: 0px var(--space-main-box);
+    gap: 64px;
+    
+}
+
+.hero-section .fursona-section {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 12px;
+    padding: 64px 0px;
+}
+
+.hero-section .hero-image {
+    border-radius: 100%;
+    width: 256px;
+}
+
+.hero-section .title-section {
+    display: flex;
+    justify-content: center;
+    flex: 1;
+    flex-direction: column;
+    margin: 1px;
+    margin-top: 0px;
+    outline: 1px solid var(--control-outer-border);
+    background-color: var(--background-2);
+    border: 1px solid var(--background-2-saturated);
+    border-top-width: 0px;
+    padding: 64px 64px;
+    gap: 34px;
+}
+
+.hero-section .title-section .hero-title {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+.hero-section .title-section .hero-title h1 {
+    color: var(--bright-white);
+    font-family: 'Ubuntu';
+    font-weight: bold;
+    font-size: var(--text-size-header);
+    text-align: center;
+}
+
+.hero-section .title-section .hero-title p {
+    color: var(--blue-accent);
+    font-size: var(--text-size-header-sub);
+    text-align: center;
+}
+
+.hero-section .title-section .hero-description {
+    text-align: center;
+}
+
+.hero-section .title-section .hero-buttons {
+    display: flex;
+    justify-content: center;
+}
+
+.cards-section {
+    display: flex;
+    flex-direction: row;
+    gap: 12px;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;    
+}
+
+.projects-section {
+    padding: 64px var(--space-main-box);
+}
+
+.certifications-section {
+    padding: 34px var(--space-main-box);
+}
+
+.contact-section {
+    background: linear-gradient(0deg, rgba(1,22,39,1) 0%, rgba(0,8,14,1) 100%);
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    padding: 64px var(--space-main-box);
+    gap: 12px;
+}
+
+.footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: var(--background-2);
+    gap: 12px;
+    padding: 24px var(--space-main-box);
+}
+
+.footer .buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 12px;
+}
+
+.footer .extra-links
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 12px;
+}
+
+.footer .extra-links header h1 {
+    font-size: var(--text-size-paragraph-focus);
+    font-weight: normal;
+    color: var(--bright-white);
+}
+
+.footer .extra-links .links-list {
+    display: flex;
+    gap: 12px;
+}
+
+.footer .copyright {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    align-items: center;
+    padding: 12px 0px;
+}
+
+.footer .copyright i {
+    color: white;
+    mix-blend-mode: overlay;
+}
+
+.clicklink {
+    display: flex;
+    align-items: center;
+    gap: 6px;
+    text-decoration: none;
 }
