--- a/src/project-card.css
+++ b/src/project-card.css
@@ -1,8 +1,8 @@
 .project-card {
     display: flex;
     flex-direction: column;
-    padding: 12px 12px;
-    gap: 12px;
+    padding: var(--space-3) var(--space-3);
+    gap: var(--space-3);
     margin: 1px;
     outline: 1px solid var(--control-outer-border);
     border: 1px solid var(--background-2-saturated);
@@ -11,11 +11,11 @@
 }
 
 .project-card header h1 {
-    font-size: var(--text-size-header-sub);
     text-align: center;
+    font: var(--text-header-sub);
 }
 
 .project-card .buttons {
     display: flex;
-    gap: 10px;
+    gap: var(--space-3);
 }
