--- a/src/css-reset.css
+++ b/src/css-reset.css
@@ -1,7 +1,17 @@
-h1, h2, h3, h4, h5, h6, p {
-    margin: 0px;
+body {
+  margin: 0px;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0px;
 }
 
 img {
-    width: 100%;
+  width: 100%;
 }
