--- a/src/project-card.css
+++ b/src/project-card.css
@@ -1,30 +1,33 @@
 .project-card {
-    display: flex;
-    flex-direction: column;
-    padding: var(--space-3) var(--space-3);
-    gap: var(--space-3);
-    margin: 1px;
-    outline: 1px solid var(--control-outer-border);
-    border: 1px solid var(--background-2-saturated);
-    background-color: var(--background-2);
-    border-radius: var(--control-border-radius);
-    max-width: 350px;
-    text-align: center;
+  display: flex;
+  flex-direction: column;
+  padding: var(--space-3) var(--space-3);
+  gap: var(--space-3);
+  margin: 1px;
+  outline: 1px solid var(--control-outer-border);
+  border: 2px solid var(--control-inner-border);
+  background-color: var(--background-2-transparent);
+  backdrop-filter: blur(5px);
+  border-radius: var(--control-border-radius);
+  max-width: 350px;
+  text-align: center;
+  box-shadow: 0px 0px 50px 0px var(--control-shadow-color);
 }
 
 .project-card header h1 {
-    text-align: center;
-    font: var(--text-header-sub);
+  text-align: center;
+  font: var(--text-header-sub);
 }
 
 .project-card .buttons {
-    display: flex;
-    gap: var(--space-3);
+  display: flex;
+  justify-content: right;
+  gap: var(--space-3);
 }
 
 @media only screen and (max-width: 600px) {
-    .project-card {
-        max-width: none;
-        gap: var(--space-2)
-    }
+  .project-card {
+    max-width: none;
+    gap: var(--space-2);
+  }
 }
