--- a/src/style.css
+++ b/src/style.css
@@ -4,309 +4,313 @@
 @import url("contact-card.css");
 
 :root {
-    --background-darkest: #00080E;
-    --background-2: #011627;
-    --background-2-saturated: #0B2438;
-    --brand-color: #FF3366;
-    --brand-color-saturated: #FF6188;
-    --cyan-accent: #2EC4B6;
-    --bright-white: #F6F7F8;
-    --text-normal: #E8EBED;
-    --text-faded: #CBD1D7;
-    --blue-accent: #20A4F3;
+  --background-darkest: #00080e;
+  --background-2: #011627;
+  --background-2-transparent: #0116275f;
+  --background-2-less-transparent: #0116279f;
+  --background-2-saturated: #0b2438;
+  --brand-color: #ff3366;
+  --brand-color-saturated: #ff6188;
+  --cyan-accent: #2ec4b6;
+  --bright-white: #f6f7f8;
+  --text-normal: #e8ebed;
+  --text-faded: #cbd1d7;
+  --blue-accent: #20a4f3;
 
-    --control-border-radius: 12px;
-    --control-outer-border: rgba(0, 0, 0, 25%);
-    
-    /* Font Sizes */
-    --brand-text-scale-factor: 1;
-    --brand-text-0: calc(64px * var(--brand-text-scale-factor));
-    --brand-text-1: calc(34px * var(--brand-text-scale-factor));
-    --brand-text-2: calc(24px * var(--brand-text-scale-factor));
-    --brand-text-3: calc(20px * var(--brand-text-scale-factor));
-    --brand-text-4: calc(16px * var(--brand-text-scale-factor));
-    
-    --paragraph-text-scale-factor: 1;
-    --paragraph-text-0: calc(24px * var(--paragraph-text-scale-factor));
-    --paragraph-text-1: calc(20px * var(--paragraph-text-scale-factor));
-    --paragraph-text-2: calc(16px * var(--paragraph-text-scale-factor));
+  --control-border-radius: 20px;
+  --control-shadow-color: rgba(0, 0, 0, 50%);
+  --control-outer-border: rgba(0, 0, 0, 50%);
+  --control-inner-border: rgba(127, 127, 127, 10%);
 
-    /* Spaces */
-    --space-scaling-factor: 1;
-    --space-0: calc(64px * var(--space-scaling-factor));
-    --space-1: calc(34px * var(--space-scaling-factor));
-    --space-2: calc(24px * var(--space-scaling-factor));
-    --space-3: calc(12px * var(--space-scaling-factor));
-    --space-4: calc(6px * var(--space-scaling-factor));
-    --space-column: var(--space-0);
+  /* Font Sizes */
+  --brand-text-scale-factor: 1;
+  --brand-text-0: calc(64px * var(--brand-text-scale-factor));
+  --brand-text-1: calc(34px * var(--brand-text-scale-factor));
+  --brand-text-2: calc(24px * var(--brand-text-scale-factor));
+  --brand-text-3: calc(20px * var(--brand-text-scale-factor));
+  --brand-text-4: calc(16px * var(--brand-text-scale-factor));
 
-    --text-interactive-size: bold var(--paragraph-text-2)px, 'Ubuntu';
-    --text-regular-paragraph: normal var(--paragraph-text-2)px, 'Roboto Condensed';
-    --text-subtitle: bold var(--paragraph-text-0)px, 'Ubuntu';
-    --text-header-sub: bold var(--paragraph-text-0)px, 'Roboto Condensed';
-    --text-section-header: bold var(--brand-text-1)px, 'Ubuntu';
-    --text-header: bold var(--brand-text-0)px, 'Ubuntu';
-    --text-paragraph-focus: normal var(--paragraph-text-1)px, 'Roboto Condensed';
-    --text-regular-paragraph-italic: italic var(--paragraph-text-2)px, 'Roboto Condensed';
+  --paragraph-text-scale-factor: 1;
+  --paragraph-text-0: calc(24px * var(--paragraph-text-scale-factor));
+  --paragraph-text-1: calc(20px * var(--paragraph-text-scale-factor));
+  --paragraph-text-2: calc(16px * var(--paragraph-text-scale-factor));
+
+  /* Spaces */
+  --space-scaling-factor: 1;
+  --space-0: calc(64px * var(--space-scaling-factor));
+  --space-1: calc(34px * var(--space-scaling-factor));
+  --space-2: calc(24px * var(--space-scaling-factor));
+  --space-3: calc(12px * var(--space-scaling-factor));
+  --space-4: calc(6px * var(--space-scaling-factor));
+  --space-column: var(--space-0);
+
+  --text-interactive-size: bold var(--paragraph-text-2) px, "Ubuntu";
+  --text-regular-paragraph: normal var(--paragraph-text-2) px, "Roboto Condensed";
+  --text-subtitle: bold var(--paragraph-text-0) px, "Ubuntu";
+  --text-header-sub: bold var(--paragraph-text-0) px, "Roboto Condensed";
+  --text-section-header: bold var(--brand-text-1) px, "Ubuntu";
+  --text-header: bold var(--brand-text-0) px, "Ubuntu";
+  --text-paragraph-focus: normal var(--paragraph-text-1) px, "Roboto Condensed";
+  --text-regular-paragraph-italic: italic var(--paragraph-text-2) px, "Roboto Condensed";
 }
 
 body {
-    display: flex;
-    flex-direction: column;
-    background-color: var(--background-darkest);
-    color: var(--text-normal);
-    margin: 0px;
-    font: var(--text-regular-paragraph);
+  display: flex;
+  flex-direction: column;
+  background-color: var(--background-darkest);
+  background-image: url("/pattern.png");
+  color: var(--text-normal);
+  margin: 0px;
+  font: var(--text-regular-paragraph);
 }
 
 /* Style all links */
 a {
-    color: var(--cyan-accent);
+  color: var(--cyan-accent);
 }
 
 span.text-highlight {
-    color: var(--blue-accent);
+  color: var(--blue-accent);
 }
 
 .main-header {
-    display: flex;
-    justify-content: space-between;
-    flex: 1;
-    padding: var(--space-3) var(--space-column);
-    background-color: var(--background-2);
-    border-bottom: 1px solid var(--background-2-saturated);
-    margin-bottom: 1px;
-    outline: 1px solid var(--control-outer-border);
+  display: flex;
+  justify-content: space-between;
+  flex: 1;
+  padding: var(--space-3) var(--space-column);
+  background-color: var(--background-2);
+  border-bottom: 1px solid var(--background-2-saturated);
+  margin-bottom: 1px;
+  outline: 1px solid var(--control-outer-border);
 }
 
 .main-header .right-buttons {
-    display: flex;
-    flex-direction: row;
-    gap: var(--space-3);
+  display: flex;
+  flex-direction: row;
+  gap: var(--space-3);
 }
 
 .hero-section {
-    display: flex;
-    padding: 0px var(--space-column);
-    gap: var(--space-column);
-    
+  display: flex;
+  padding: 0px var(--space-column);
+  gap: var(--space-column);
 }
 
 .hero-section .fursona-section {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    gap: 12px;
-    padding: var(--space-0) 0px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 12px;
+  padding: var(--space-0) 0px;
 }
 
 .hero-section .hero-image {
-    border-radius: 100%;
-    width: 256px;
+  border-radius: 100%;
+  width: 256px;
 }
 
 .hero-section .title-section {
-    display: flex;
-    justify-content: center;
-    flex: 1;
-    flex-direction: column;
-    margin: 1px;
-    margin-top: 0px;
-    outline: 1px solid var(--control-outer-border);
-    background-color: var(--background-2);
-    border: 1px solid var(--background-2-saturated);
-    border-top-width: 0px;
-    padding: var(--space-0) var(--space-0);
-    gap: var(--space-1);
+  display: flex;
+  justify-content: center;
+  flex: 1;
+  flex-direction: column;
+  margin: 1px;
+  margin-top: 0px;
+  outline: 1px solid var(--control-outer-border);
+  background-color: var(--background-2-less-transparent);
+  border: 1px solid var(--background-2-saturated);
+  backdrop-filter: blur(5px);
+  border-top-width: 0px;
+  padding: var(--space-0) var(--space-0);
+  gap: var(--space-1);
+  border-bottom-left-radius: var(--control-border-radius);
+  border-bottom-right-radius: var(--control-border-radius);
 }
 
 .hero-section .title-section .hero-title {
-    display: flex;
-    flex-direction: column;
-    gap: var(--space-4);
+  display: flex;
+  flex-direction: column;
+  gap: var(--space-4);
 }
 
 .hero-section .title-section .hero-title h1 {
-    color: var(--bright-white);
-    font: var(--text-header);
-    text-align: center;
+  color: var(--bright-white);
+  font: var(--text-header);
+  text-align: center;
 }
 
 .hero-section .title-section .hero-title p {
-    color: var(--blue-accent);
-    text-align: center;
-    font: var(--text-header-sub);
+  color: var(--blue-accent);
+  text-align: center;
+  font: var(--text-header-sub);
 }
 
 .hero-section .title-section .hero-description {
-    text-align: center;
-    font: var(--text-paragraph-focus);
+  text-align: center;
+  font: var(--text-paragraph-focus);
 }
 
 .hero-section .title-section .hero-buttons {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .cards-section {
-    display: flex;
-    flex-direction: row;
-    gap: var(--space-3);
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;    
+  display: flex;
+  flex-direction: row;
+  gap: var(--space-3);
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
 
 .projects-section {
-    padding: var(--space-0) var(--space-column);
+  padding: var(--space-0) var(--space-column);
 }
 
 .certifications-section {
-    padding: var(--space-1) var(--space-column);
+  padding: var(--space-1) var(--space-column);
 }
 
 .contact-section {
-    background: linear-gradient(0deg, rgba(1,22,39,1) 0%, rgba(0,8,14,1) 100%);
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    padding: var(--space-0) var(--space-column);
-    gap: var(--space-3);
+  background: linear-gradient(0deg, rgba(1, 22, 39, 100%) 0%, rgba(0, 8, 14, 0%) 100%);
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  padding: var(--space-0) var(--space-column);
+  gap: var(--space-3);
 }
 
 .footer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: var(--background-2);
-    gap: var(--space-3);
-    padding: var(--space-2) var(--space-column);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: var(--background-2);
+  gap: var(--space-3);
+  padding: var(--space-2) var(--space-column);
 }
 
 .footer .buttons {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    gap: var(--space-3);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: var(--space-3);
 }
 
-.footer .extra-contact-links
-{
-    display: flex;
-    flex-direction: column;
-    gap: var(--space-3);
-    padding: var(--space-3) 0px;
+.footer .extra-contact-links {
+  display: flex;
+  flex-direction: column;
+  gap: var(--space-3);
+  padding: var(--space-3) 0px;
 }
 
-.footer .extra-links
-{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: var(--space-4);
+.footer .extra-links {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: var(--space-4);
 }
 
 .footer .extra-links header h1 {
-    font-size: var(--paragraph-text-0);
-    font-weight: normal;
-    color: var(--bright-white);
+  font-size: var(--paragraph-text-0);
+  font-weight: normal;
+  color: var(--bright-white);
 }
 
 .footer .extra-links .links-list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: var(--space-3);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: var(--space-3);
 }
 
 .footer .copyright {
-    display: flex;
-    flex-direction: column;
-    gap: var(--space-3);
-    align-items: center;
-    padding: var(--space-3) 0px;
+  display: flex;
+  flex-direction: column;
+  gap: var(--space-3);
+  align-items: center;
+  padding: var(--space-3) 0px;
 }
 
 .footer .copyright i {
-    color: white;
-    mix-blend-mode: overlay;
-    font: var(--text-regular-paragraph-italic);
+  color: white;
+  mix-blend-mode: overlay;
+  font: var(--text-regular-paragraph-italic);
 }
 
 .clicklink {
-    display: flex;
-    align-items: center;
-    gap: var(--space-4);
-    text-decoration: none;
+  display: flex;
+  align-items: center;
+  gap: var(--space-4);
+  text-decoration: none;
 }
 
 @media only screen and (max-width: 1120px) {
-    :root {
-        --brand-text-scale-factor: 0.9;
-        --space-column: var(--space-1);
-    }
+  :root {
+    --brand-text-scale-factor: 0.9;
+    --space-column: var(--space-1);
+  }
 }
 
 @media only screen and (max-width: 800px) {
-    :root {
-        --brand-text-scale-factor: 0.5;
-        --paragraph-text-scale-factor: 0.9;
-        --space-scaling-factor: 0.7;
-    }
+  :root {
+    --brand-text-scale-factor: 0.5;
+    --paragraph-text-scale-factor: 0.9;
+    --space-scaling-factor: 0.7;
+  }
 }
 
 @media only screen and (max-width: 700px) {
-    .hero-section .hero-image {
-        width: 150px;
-    }
+  .hero-section .hero-image {
+    width: 150px;
+  }
 }
 
 @media only screen and (max-width: 600px) {
-    :root {
-        --space-scaling-factor: 0.7;
-        --space-column: var(--space-2);
-        --paragraph-text-scale-factor: 0.85;
-    }
+  :root {
+    --space-scaling-factor: 0.7;
+    --space-column: var(--space-2);
+    --paragraph-text-scale-factor: 0.85;
+  }
 
-    .hero-section .title-section {
-        padding: var(--space-2) var(--space-3);
-    }
+  .hero-section .title-section {
+    padding: var(--space-2) var(--space-3);
+  }
 
-    .hero-section .fursona-section {
-        padding: 0;
-    }
+  .hero-section .fursona-section {
+    padding: 0;
+  }
 
-    .hero-section .hero-image {
-        width: 150px;
-    }
+  .hero-section .hero-image {
+    width: 150px;
+  }
 
-    .cards-section .project-card {
-        flex-grow: 1;
-    }
+  .cards-section .project-card {
+    flex-grow: 1;
+  }
 }
 
 @media only screen and (max-width: 425px) {
-    :root {
-        --space-scaling-factor: 0.45;
-        --text-header-sub: bold calc(var(--paragraph-text-0) * 0.9)px, 'Roboto Condensed';
-    }
+  :root {
+    --space-scaling-factor: 0.45;
+    --text-header-sub: bold calc(var(--paragraph-text-0) * 0.9) px, "Roboto Condensed";
+  }
 
-    .hero-section {
-        flex-direction: column-reverse;
-    }
+  .hero-section {
+    flex-direction: column-reverse;
+  }
 }
 
 @media only screen and (max-width: 320px) {
-    .main-header {
-        justify-content: center;
-        gap: var(--space-2);
-    }
+  .main-header {
+    justify-content: center;
+    gap: var(--space-2);
+  }
 
-    .main-header .right-buttons{
-        gap: var(--space-2);
-    }
-    
+  .main-header .right-buttons {
+    gap: var(--space-2);
+  }
 }
