Fix weird button color when active

--- a/src/button.css
+++ b/src/button.css
@@ -15,7 +15,7 @@
 }
 
 .button:active {
-  background-color: var(--cyan-accent);
+  background-color: var(--brand-color-saturated);
   border-color: var(--brand-color);
 }
 
